## Talisker: Architecture-independent resources

## Copyright 2017 Mo McRoberts.
##
##  Licensed under the Apache License, Version 2.0 (the "License");
##  you may not use this file except in compliance with the License.
##  You may obtain a copy of the License at
##
##      http://www.apache.org/licenses/LICENSE-2.0
##
##  Unless required by applicable law or agreed to in writing, software
##  distributed under the License is distributed on an "AS IS" BASIS,
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
##  See the License for the specific language governing permissions and
##  limitations under the License.

AC_INIT([Talisker],[develop])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE

AC_CONFIG_SUBDIRS([Fonts])
AC_CONFIG_SUBDIRS([ColorSchemes])
AC_CONFIG_SUBDIRS([DesktopPictures])
AC_CONFIG_SUBDIRS([UserPictures])
AC_CONFIG_SUBDIRS([UserTemplate])
AC_CONFIG_SUBDIRS([Sounds])
AC_CONFIG_SUBDIRS([Stationery])
AC_CONFIG_SUBDIRS([Icons])

AC_CONFIG_FILES([
Makefile
])

AC_OUTPUT
